--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Gerrit is niet een lieve slak</title>
+		<title>Gerrit is een lieve slak</title>
 		<link type="text/css" href="styles/my_style.css" rel="stylesheet" />
 		<script type="text/javascript" src="scripts/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="scripts/my_scripts.js"></script>
