--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="scripts/my_scripts.js"></script>
 	</head>
 	<body>
+		<h1>Test</h1>
 		<section id="woonkamer">
 			<img id="background" src="images/background.jpg" />
 			<img id="gerrit" src="images/gerrit.png" />
