--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 			<img id="gerrit" src="images/gerrit.png" />
 		</section>
 		<p>Tim Squarepants, Nickelodeon Animation Studios 1999</p>
+
+		<h1>Hallo wereld</h1>
 	</body>
 </html>
