--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>hallo wereld</title>
 </head>
 <body>
-	<h1>Hallo wereld</h1>
+	<h3>wat een leuke studenten zijn jullie</h3>
+	<p>Ik heb echt nog nooit zulke leuke studenten gezien</p>
 </body>
 </html>
